--- a/starbuzz.css
+++ b/starbuzz.css
@@ -60,11 +60,10 @@ a:visited {
   border-bottom:    thin dotted #675c47;
 }
 
-#allcontent{
+.allcontent{
   width:            800px;
   padding-top:      5px;
   padding-bottom:   5px;
   background-color: #675c47;
-  margin-left:      auto;
-  margin-right:     auto;
+  margin:0px auto;
 }
