--- a/starbuzz.css
+++ b/starbuzz.css
@@ -7,24 +7,25 @@ body {
 
 #header {
   background-color: #675c47;
-  margin:           10px;
+  margin: 10px 10px 0px 10px;
   height:           108px;
 }
 
 #main {
+  display: table-cell;
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 330px 10px 10px;
+  vertical-align: top;
 }
 
 #sidebar {
+  display: table-cell;
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 10px 10px 10px;
   width:            280px;
-  float:            right;
+  vertical-align: top;
 }
 
 #footer {
@@ -32,9 +33,9 @@ body {
   color:            #efe5d0;
   text-align:       center;
   padding:          15px;
-  margin:           10px;
+  margin:  0px  10px  10px  10px;
   font-size:        90%;
-  clear:            right;
+
 }
 
 h1 {
@@ -60,10 +61,26 @@ a:visited {
   border-bottom:    thin dotted #675c47;
 }
 
-.allcontent{
-  width:            800px;
-  padding-top:      5px;
-  padding-bottom:   5px;
-  background-color: #675c47;
-  margin:0px auto;
+
+#drinks{
+  display: table-cell;
+  background-color: #efe5d0;
+  width:20%;
+  padding:15px;
+  vertical-align: top;
+}
+div#tableContaner{
+  display: table;
+}
+div#tableRow{
+  display: table-row;
+}
+
+#tableContaner{
+display: table;
+border-spacing: 10px;
+
+}
+#tableRow{
+  display:table-row;
 }
