--- a/starbuzz.css
+++ b/starbuzz.css
@@ -7,7 +7,7 @@ body {
 
 #header {
   background-color: #675c47;
-  margin:           10px;
+  margin:           10px 10px 0px 10px;
   height:           108px;
 }
 
@@ -15,16 +15,16 @@ body {
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 330px 10px 10px;
+  display:          table-cell;
+  vertical-align:   top;
 }
 
 #sidebar {
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 10px 10px 10px;
-  width: 280px;
-  float: right;
+  display:          table-cell;
+  vertical-align:   top;
 }
 
 #footer {
@@ -32,9 +32,8 @@ body {
   color:            #efe5d0;
   text-align:       center;
   padding:          15px;
-  margin:           10px;
+  margin:           0px 10px 10px 10px;
   font-size:        90%;
-  clear:            left;
 }
 
 h1 {
@@ -60,10 +59,40 @@ a:visited {
   border-bottom:    thin dotted #675c47;
 }
 
-.allcontent{
-  width: 800px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  background-color: #675c47;
-  margin: 0 auto;
+div#tableContainer{
+  display:          table;
+  border-spacing:   10px;
+}
+
+div#tableRow{
+  display:          table-row; 
+}
+
+#drinks{
+  display:          table-cell;
+  background-color: #efe5d0;
+  width:            20%;
+  padding:          15px;
+  vertical-align:   top; 
+}
+
+.headerImageleft{
+  float:            left;
+  background-image: url(images/header.gif);
+  width:            400px;
+  height:           100px;
+}
+
+.headerImageright{
+  float:            right;
+  background-image: url(images/header.gif);
+  width:            400px;
+  height:           100px;
+  background-position: -400px,0px;
+}
+
+#award{
+  position:         absolute;
+  top:              30px;
+  left:             365px;
 }
