--- a/starbuzz.css
+++ b/starbuzz.css
@@ -5,13 +5,13 @@ body {
   margin:           0px;
 }
 
-#header {
+header {
   background-color: #675c47;
   margin:           10px 10px 0px 10px;
   height:           108px;
 }
 
-#main {
+main {
   display:table-cell;
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
@@ -19,7 +19,7 @@ body {
   vertical-align: top;
 }
 
-#sidebar {
+aside{
   display:table-cell;
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
@@ -28,7 +28,7 @@ body {
 
 }
 
-#footer {
+footer {
   background-color: #675c47;
   color:            #efe5d0;
   text-align:       center;
@@ -68,7 +68,7 @@ border-spacing: 10px;
   display: table-row;
 }
 
-#drink {
+#drinks {
 display: table-cell;
 background-color: #efe5d0;
 width:20%;
@@ -93,4 +93,13 @@ vertical-align: top;
   position: absolute;
   top :30px;
   left: 365px;
+}
+#coupon{
+  position: fixed;
+  top:350px;
+  left:-90px;
+}
+#coupon a, img{
+  border: none;
+
 }
