--- a/starbuzz.css
+++ b/starbuzz.css
@@ -113,3 +113,29 @@ div#tableRow{
   left:             -250px;
   transition:       0.5s;
 }
+
+nav{
+  background-color: #efe5d0;
+  margin:           10px 10px 0px 10px;
+}
+
+nav ul{
+  margin:           0px;
+  list-style-type:  none;
+  padding:          5px 0px 5px 0px;
+}
+
+nav ul li{
+  display:          inline;
+  padding:          5px 10px 5px 10px;
+}
+
+nav ul li a:like, nav ul li a:visited{
+  color:            #954b4b;
+  border-bottom:    none;
+  font-weight:      bold;
+}
+
+nav ul li .selected{
+  background-color: #c8b99c;
+}
